--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: ui_components
 description: A new Flutter package project.
-version: 0.0.1
+version: 1.0.0
 author: Frank Montalvo Ochoa
+
 homepage: https://www.ivortec.com
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.17.0 <2.0.0"
 
 dependencies:
@@ -15,6 +16,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+    
+  flutter_lints: ^1.0.0
 
 flutter:
